--- a/.bablerc
+++ b/.bablerc
@@ -1,3 +1,13 @@
 {
-  "presets": ["@babel/preset-env"]
+  "presets": [
+    [
+      "env",
+      {
+        exclude: ["transform-es2015-classes"],
+      }
+    ]
+  ],
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
 }
