--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "bugs": {
     "url": "https://github.com/helipilot50/apollo-server-aerospike-cache/issues"
   },
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "build": "babel src -d dist",
-    "test": "npm run build && mocha --require @babel/register"
+    "build": "babel ./src -d ./dist",
+    "test": "nyc mocha test/**/*.spec.js --require babel-register  --require babel-polyfill --timeout 15000 --exit"
   },
   "engines": {
     "node": ">=8"
@@ -25,7 +25,14 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "mocha": "^6.2.0"
+    "@babel/register": "^7.5.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1"
   }
 }
