--- a/.bablerc
+++ b/.bablerc
@@ -1,13 +1,6 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        exclude: ["transform-es2015-classes"],
-      }
-    ]
-  ],
-  "plugins": [
-    "transform-object-rest-spread"
+  "presets": ["es2015", "stage-0"],
+   "plugins": [
+    "transform-runtime"
   ]
 }
