--- a/module/package.json
+++ b/module/package.json
@@ -14,7 +14,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "npm run build && mocha --require @babel/register"
+    "test": "mocha"
   },
   "engines": {
     "node": ">=8"
@@ -28,7 +28,6 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.0",
-    "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "mocha": "^5.2.0"
   }
