--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "apollo-datasource-rest": "^0.1.5",
     "apollo-server": "2.6.1",
     "apollo-server-testing": "2.6.1",
+    "apollo-tracing": "^0.8.4",
     "dotenv": "^6.1.0",
     "graphql": "^14.2.1",
     "isemail": "^3.1.3",
