--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,21 @@
-version: '3'
+version: "3"
 services:
   aerospikedb:
-      image: aerospike/aerospike-server:latest
-      ports:
+    image: aerospike/aerospike-server:latest
+    ports:
       - 3000:3000
       - 3001:3001
-      environment:
-        NAMESPACE: "test"
-        MEM_GB: 12
-  
+    environment:
+      NAMESPACE: "test"
+      MEM_GB: 12
+  # cache-test-server:
+  #   container_name: cache-test-server
+  #   build:
+  #     context: ./server
+  #   depends_on:
+  #     - aerospikedb
+  #   links:
+  #     - aerospikedb
+  #   ports:
+  #     - 4000:4000
+    
