--- a/module/package.json
+++ b/module/package.json
@@ -2,6 +2,7 @@
   "name": "apollo-server-cache-aerospike",
   "version": "0.5.0",
   "author": "helipilot50@gmail.com",
+  "description": "Apollo Server cache using Aerospike",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -13,8 +14,8 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src -d dist",
-    "test": "mocha"
+    "build": "babel src -d dist --copy-files",
+    "test": "mocha test/**/*.spec.js --require @babel/register  --require babel-polyfill --timeout 15000 --exit"
   },
   "engines": {
     "node": ">=8"
@@ -28,7 +29,19 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.0",
+    "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^10.0.0",
     "chai": "^4.2.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0"
   }
 }
