--- a/module/package.json
+++ b/module/package.json
@@ -14,30 +14,23 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src -d dist --copy-files",
-    "test": "mocha test/**/*.spec.js --require @babel/register  --require babel-polyfill --timeout 15000 --exit"
+    "build": "babel src -d dist --copy-source",
+    "test": "mocha test/**/*.spec.js  --timeout 15000 --exit"
   },
   "engines": {
     "node": ">=8"
   },
   "dependencies": {
+    "@babel/runtime": "^7.6.3",
     "aerospike": "^3.11.0",
-    "apollo-server-caching": "^0.5.0"
+    "apollo-server-caching": "^0.5.0",
+    "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/register": "^7.4.0",
-    "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babelify": "^10.0.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
     "chai": "^4.2.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
