--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon src/index.js",
-    "start:ci": "node src/index.js"
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.6.3",
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.1.5",
     "apollo-server": "2.6.1",
@@ -19,7 +17,6 @@
     "apollo-server-plugin-response-cache": "^0.3.5",
     "apollo-server-testing": "2.6.1",
     "apollo-tracing": "^0.8.4",
-    "babel-plugin-transform-regenerator": "^6.26.0",
     "dotenv": "^6.1.0",
     "graphql": "^14.2.1",
     "isemail": "^3.1.3",
@@ -28,21 +25,10 @@
     "sqlite3": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/register": "^7.4.0",
     "apollo": "^2.1.8",
     "apollo-link": "^1.2.3",
     "apollo-link-http": "^1.5.5",
-    "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-jest": "^23.4.2",
     "jest": "^23.6.0",
     "nock": "^10.0.2",
     "node-fetch": "^2.2.1",
