--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src -d dist --copy-source",
+    "build": "babel src -d dist",
     "test": "mocha test/**/*.spec.js  --timeout 15000 --exit"
   },
   "engines": {
