--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,14 @@ steps:
     commands:
       - npm install
       - npm run build
+    when:
+      branch:
+        - master
+        - develop
+        - feature/*
+  - name: test
+    image: node:10
+    commands:
       - npm run test
     when:
       branch:
