--- a/.drone.yml
+++ b/.drone.yml
@@ -27,8 +27,10 @@ steps:
     settings:
       username: helipilot50
       password:
-        from_secret: ${npm_password}
+        from_secret: ${NPM_PASSWORD}
       email: helipilot50@gmail.com
+      token:
+        from_secret: ${NPM_TOKEN}
       folder: dist
     when:
       branch:
