--- a/.drone.yml
+++ b/.drone.yml
@@ -27,10 +27,10 @@ steps:
     settings:
       username: helipilot50
       password:
-        from_secret: ${NPM_PASSWORD}
+        from_secret: $${NPM_PASSWORD}
       email: helipilot50@gmail.com
       token:
-        from_secret: ${NPM_TOKEN}
+        from_secret: $${NPM_TOKEN}
       folder: dist
     when:
       branch:
