--- a/.drone.yml
+++ b/.drone.yml
@@ -25,10 +25,10 @@ steps:
   - name: npm
     image: plugins/npm
     settings:
-      # username: helipilot50
+      username: helipilot50
       # password:
       #   from_secret: NPM_PASSWORD
-      # email: helipilot50@gmail.com
+      email: helipilot50@gmail.com
       token:
         from_secret: NPM_TOKEN
       folder: dist
