--- a/.drone.yml
+++ b/.drone.yml
@@ -26,11 +26,9 @@ steps:
     image: plugins/npm
     settings:
       username: helipilot50
-      # password:
-      #   from_secret: NPM_PASSWORD
+      password: $NPM_PASSWORD
       email: helipilot50@gmail.com
-      token:
-        from_secret: NPM_TOKEN
+      token: $NPM_TOKEN
       folder: dist
     when:
       branch:
