--- a/.drone.yml
+++ b/.drone.yml
@@ -13,16 +13,16 @@ steps:
         - master
         - develop
         - feature/*
-  - name: test
-    image: node:10
-    commands:
-      - npm run test
-    when:
-      branch:
-        - master
-        - develop
-        - feature/*
-  - name: npm
+  # - name: test
+  #   image: node:10
+  #   commands:
+  #     - npm run test
+  #   when:
+  #     branch:
+  #       - master
+  #       - develop
+  #       - feature/*
+  - name: publish
     image: plugins/npm
     settings:
       username: helipilot50
