--- a/.drone.yml
+++ b/.drone.yml
@@ -26,9 +26,9 @@ steps:
     image: plugins/npm
     settings:
       username: helipilot50
-      password: ${NPM_PASSWORD}
+      password: $${NPM_PASSWORD}
       email: helipilot50@gmail.com
-      token: ${NPM_TOKEN}
+      token: $${NPM_TOKEN}
       folder: dist
     when:
       branch:
